# rse-python-course-bw

./: README.md  index.html  kinematics.html  kinematics.py  kinematicsbw.html  kinematicsbw.py  notebook.ipynb  pyproject.toml  search.js  test_kinematics.py  test_kinematicsbw.py
.github/workflows/: ci.yml  docs.yml  publish.yml
