[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kinematicsbw"
version = "0.2.0"
license = { text = "GPL-3.0-or-later" }
dependencies = ["pint==0.18"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
py-modules = ["kinematicsbw"]
